Fixed Style Selector Heading styling (partial fix, still jumps up a few inches when changing from a portrait style to landscape image)

--- a/client/src/components/Overview/overview.module.css
+++ b/client/src/components/Overview/overview.module.css
@@ -59,7 +59,7 @@
 
 .overview__style-selector {
   grid-column: 6 / span 6;
-  grid-row-start: 4;
+  grid-row-start: 6;
   height: 80px;
 }
 
@@ -72,6 +72,11 @@
   object-fit: cover;
   width: 400px;
   height: auto;
+  grid-row: 1 / span 10;
+}
+
+.style-selector__header {
+  margin-left: 0;
 }
 
 /* =======================
